# AICS-doc

./: .gitignore  README.md
lab1/private/: CMakeLists.txt  README.md  best_model.txt  best_model100.txt  build.sh  data_generator.cpp  data_generator.h  evaluation_report.txt  mlp.cpp  mlp.h  test_predictions.csv  train.cpp  train_data-100.csv  train_data.csv  training_history.csv  val_data-100.csv  validate.cpp
lab1/public/: CMakeLists.txt  README.md  build.sh  mlp.cpp  mlp.h  test_data.csv  train.cpp  val_data.csv  validate.cpp
lab2/: lab2.md  modify_save.py
lab3/: lab3.md  prune-example.py  quantize-example.py
lab4/: attention.ipynb  gemm.ipynb  lab4.md
lab5/: lab5.md
lab6/: lab6.md
